<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6FA">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/yijianfankui"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:src="@drawable/ic_prev"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="42dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/formContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="488dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lianxifangshi"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/contactEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:autofillHints="@null"
                        android:background="@drawable/my_edit_text_bg"
                        android:hint="@string/lianxifangshi2"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        tools:ignore="TextFields" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fankuiyijian"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/feedbackEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:autofillHints="@null"
                            android:background="@drawable/my_edit_text_bg"
                            android:gravity="top"
                            android:hint="@string/fankuiyijian2"
                            android:inputType="textMultiLine"
                            android:lineSpacingExtra="10dp"
                            android:lineSpacingMultiplier="1.2"
                            android:maxLength="100"
                            android:maxLines="8"
                            android:padding="12dp"
                            android:textColor="#666666"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/feedbackCountText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="#666666"
                            android:textSize="12sp"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="/100"
                            android:textColor="#666666"
                            android:textSize="12sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="42dp"
                android:layout_marginTop="42dp"
                android:backgroundTint="@color/projectPrimaryColor"
                app:cardCornerRadius="1000dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/formContainer"
                app:layout_constraintWidth_max="488dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingVertical="12dp"
                    android:text="@string/lijitijiao"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
