<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/fapiaoxiangqing"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/buttonBack"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                android:src="@drawable/ic_prev"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="48dp"
                android:background="#9098A2" />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="42dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_max="488dp">

                    <TextView
                        android:id="@+id/buttonEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/bianji"
                        android:textColor="@android:color/holo_green_light"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/buttonDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/shanchu"
                        android:textColor="@android:color/holo_red_light"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/buttonExport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/daochutupian"
                        android:textColor="@android:color/holo_purple"
                        tools:ignore="TextContrastCheck" />

                    <FrameLayout
                        android:id="@+id/pictureWrap0"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/picture0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@null" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@null" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pictureWrap1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/picture1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:adjustViewBounds="true"
                android:contentDescription="@null" />

            <ImageView
                android:id="@+id/pictureWrap1ButtonClose"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="32dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/ic_close" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
